# aa-classic-daily-alerts-server

./: .env  .gitignore  Cargo.toml  README.md  shell.nix
migrations/: 20230808215303_webhooks.sql
src/: clock.rs  event_system.rs  main.rs  queue_system.rs
temp/: env-vars
