[package]
name = "aa-classic-daily-alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
anyhow = "1.0.72"

[dependencies.serenity]
default-features = false
git = "https://github.com/serenity-rs/serenity.git"
features = ["http", "model", "rustls_backend"]
version = "0.11.6"
